--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 
 <head>
    <script>
-      window.location = "https://discord.gg/XztWP3RQqp";
+      window.location = "https://regta.rocot.xyz/";
    </script>
    <!-- HTML meta refresh  301 permanent redirection -->
 
-   <meta http-equiv="refresh" content="0; url=”https://discord.gg/XztWP3RQqp>
+   <meta http-equiv="refresh" content="0; url=”https://regta.rocot.xyz/>
 
 </head>
 
