--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    </script>
    <!-- HTML meta refresh  301 permanent redirection -->
 
-   <meta http-equiv="refresh" content="0; url=”https://regta.rocot.xyz/>
+   <meta http-equiv="refresh" content="0; url=”https://regta.rocot.xyz/">
 
 </head>
 
