--- a/discord/index.html
+++ b/discord/index.html
@@ -4,11 +4,11 @@
 
 <head>
    <script>
-      window.location = "https://regta.rocot.xyz/";
+      window.location = "https://discord.com/invite/mzJxU8kzW2";
    </script>
    <!-- HTML meta refresh  301 permanent redirection -->
 
-   <meta http-equiv="refresh" content="0; url=”https://regta.rocot.xyz/">
+   <meta http-equiv="refresh" content="0; url=”https://discord.com/invite/mzJxU8kzW2">
 </head>
 <body>
 </body>
